--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -13,6 +13,7 @@
   position: relative;
   z-index: 1;
   height: 100vh;
+  width: 100vw;
   background-color: colors.$dark;
 }
 
